<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLLogin"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_fragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Fragments.login">

    <EditText
        android:id="@+id/etEmailL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/email"
        android:background="@drawable/fields"
        android:padding="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etPassL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="8dp"
        android:fontFamily="monospace"
        android:hint="@string/password"
        android:background="@drawable/fields"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/loginBtnAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_login"
        android:fontFamily="monospace"
        android:text="@string/Sign_in"
        android:textColor="@color/common_google_signin_btn_text_dark"
        android:textSize="16sp" />

</LinearLayout>